<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="audioBooks">AudioBooks</string>
    <string name="audioBook">AudioBook</string>
    <string name="playButton">PlayButton</string>
    <string name="favourites">Favourites</string>
    <string name="Home">Home</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="search_books">Search Books</string>
    <string name="hello">Hello</string>
    <string name="popular">Popular</string>
    <string name="bestseller">BestSeller</string>
    <string name="newest">Newest</string>
    <string name="audiobooks">AudioBooks</string>
    <string name="viewAll">ViewAll</string>
    <string name="bookName">Book Name</string>
    <string name="bookTitle">Book Title</string>
    <string name="author_name">Author name</string>
    <string name="audioBookCD">AudioBookCd</string>

</resources>