<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="inherit"
        tools:context=".UI.home.HomeFragment">


        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/hello"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/search_books"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/discover"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helloText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <LinearLayout
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.example.googlebooksapi.VerticalTextView
                    android:id="@+id/popularTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="100dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center_vertical"
                    android:rotation="180"
                    android:text="@string/popular"
                    android:textAlignment="viewEnd"
                    android:textColor="#000000"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/bestSellerTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="100dp"
                    android:elegantTextHeight="false"
                    android:fontFamily="@font/montserrat"
                    android:maxLines="1"
                    android:paddingTop="18dp"
                    android:rotation="270"
                    android:text="@string/bestseller"
                    android:textAlignment="center"
                    android:textColor="#595656"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/newestTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="100dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center|end"
                    android:maxLines="1"
                    android:rotation="-90"
                    android:text="@string/newest"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="normal"
                    app:autoSizeTextType="none" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeBooksRV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homeRVItemHeight"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/book_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/audioBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/audiobooks"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/viewAllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/viewAll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audioBooksRV"
            android:layout_width="409dp"
            android:layout_height="164dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioBooks"
            tools:listitem="@layout/audiobook_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
