<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UI.audiobookDetail.AudioBookDetailFragment">


        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/search_books"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/audioBooks"
            android:textColor="@color/colorDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/searchButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="#040000"
            android:contentDescription="@string/backImg"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bookDetailHeight"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/book_detail_item">

        </androidx.recyclerview.widget.RecyclerView>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@color/bgYellow"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <TextView
                android:id="@+id/audiobooKTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/audioBook"
                android:textAlignment="center"
                android:textColor="@color/darkerYellow"
                android:textSize="14sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/playButtonFL"
            android:layout_width="50dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_rounded"
            app:layout_constraintStart_toEndOf="@+id/frameLayout2"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <ImageView
                android:id="@+id/playButtonIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/playButton"
                android:src="@android:drawable/ic_media_play" />
        </FrameLayout>

        <TextView
            android:id="@+id/detailsTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorDark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            tools:text="Exile on Main St." />

        <TextView
            android:id="@+id/detailsAuthorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#7C7A7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTitleTV"
            tools:text="Robert Greenfield" />

        <TextView
            android:id="@+id/detailsDescriptionTV"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/francois_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsAuthorTV"
            app:lineHeight="20dp"
            tools:text="This shit here be a lot of damn text scrolling nam saying my firend" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>